# terms-of-service

./: .gitignore  README.md  __init__.py  ape-config.yaml  foundry.toml  pyproject.toml
.github/workflows/: test.yml
abi/: TermsOfService.json
contracts/: TermsOfService.sol
scripts/: deploy-base.sh  deploy-ethereum.sh  deploy.py  set-terms-of-service.sh  update-arbitrum-2.py  update-arbitrum.py  update-base.py  update-ethereum.py  update-polygon.py  update.py  verify-deployment.sh
src/: TermsOfService.sol
terms_of_service/: __init__.py  acceptance_message.py
tests/: test_sign_terms_of_service.py  test_terms_of_service.py  test_update_terms_of_service.py
