[tool.poetry]
name = "terms-of-service"
version = "0.1.0"
description = "Terms of Service acceptance manager for smart contracts"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "terms_of_service"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69.0.3"
web3 = "*"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
eth-ape = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
